@@ -11,3 +11,4 @@ extraudebs
 apt*
 localudebs
 debugudebs
+stamps
